# Simple-Graphics-Format

./: .gitignore  README.md  pyproject.toml
.testing/: gradient_generator.py  test.py
.testing/sgf/areas/: forest_5.sgf  forest_6.sgf  ground_map.sgf
.testing/sgf/gradients/: diagonal.sgf  horizontal.sgf  random.sgf  vertical.sgf  white_square.sgf
.testing/sgf/player/: battle.sgf  overworld.sgf
.testing/sgf/slime/: deco_flower.sgf  deco_leaf.sgf  green_battle.sgf  green_overworld.sgf
src/sgf_image_loader/: sgf.py  sgf_converter.py  sgf_parser.py  sgf_writer.py
src/sgf_image_loader.egg-info/: PKG-INFO  SOURCES.txt
