[project]
name = "sgf_image_loader"
version = "0.0.1"
authors = [
  { name="KingToot", email="armorgamesdot@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"